Fixed: Centering of expand/collapse icon for season

--- a/frontend/src/Series/Details/SeriesDetailsSeason.css
+++ b/frontend/src/Series/Details/SeriesDetailsSeason.css
@@ -90,7 +90,7 @@
   top: 50%;
   left: 50%;
   margin-top: -12px;
-  margin-left: -15px;
+  margin-left: -12px;
 }
 
 .noEpisodes {
